# ADatL1

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  data  debug.ipynb  debug.py  environment.yaml  pyproject.toml  requirements.txt
Example/: E2E.ipynb  axo.html
axo/: __init__.py
axo/callbacks/: _rates.py
axo/data_util/: __init__.py  _normalise.py  _pack.py  _quant_limit.py  _read.py  data.py
axo/losses/: base.py  cyl_PtPz_mae.py
axo/metric/: axo_score.py  histogram.py
axo/models/: __init__.py  ae.py  readme.md  vae.py
axo/utilities/: config.yml  display.py  retrieve.py
ci_util/: common-setup.yml  init.py  job_hold.py  job_maker.py  job_maker_script.py  job_submit.py  smoke.py  smoke_script.py  sweep_maker.py
configs/: capckpt.yaml  debug.yaml  eval.yaml  train.yaml
configs/algorithm/: ae.yaml  axov4.yaml  axov5.yaml  axov5_vae.yaml  axov5_vicreg.yaml  classifier.yaml  dsae.yaml  dsvae.yaml  image_ae.yaml  image_realnvp.yaml  image_svdd.yaml  image_vae.yaml  qvae.yaml  qvicreg.yaml  realnvp.yaml  rvae.yaml  svdd.yaml  vae.yaml  vicreg.yaml  vicreg_qvae.yaml  vicreg_vae.yaml  wnae.yaml
configs/callbacks/: axov4.yaml  basic.yaml  batch_size_finder.yaml  cap.yaml  classifier.yaml  classifier_rate.yaml  debug.yaml  default.yaml  eval.yaml  ib_annealing.yaml  model_checkpoint_cap.yaml  model_checkpoint_ds.yaml  model_checkpoint_i.yaml  model_checkpoint_lko.yaml  model_checkpoint_loo.yaml  mselection.yaml  rate.yaml  vae.yaml
configs/data/: L1AD.yaml  _L1AD.yaml  axov4.yaml  axov5.yaml  axov6.yaml  axov6_vicreg.yaml  basis.yaml  cifar10.yaml  classifier.yaml  classifier_5sig.yaml  classifier_allsig.yaml  debug.yaml  default.yaml  robustad.yaml
configs/debug/: profiler.yaml
configs/evaluation/: default.yaml
configs/evaluator/: basic.yaml  default.yaml  vae.yaml
configs/evaluator_callbacks/: ad_basics.yaml  basic.yaml  corrs.yaml  default.yaml  eval.yaml
configs/experiment/: ae.yaml  ae_agnostic.yaml  axov4.yaml  axov5_vicreg_vae.yaml  classifier.yaml  classifier_5sig.yaml  classifier_allsig.yaml  contrastive.yaml  debug.yaml  dsae.yaml  dsae_agnostic.yaml  dsvae.yaml  dsvae_agnostic.yaml  mivae.yaml  qvae.yaml  realnvp.yaml  realnvp_agnostic.yaml  svdd.yaml  svdd_agnostic.yaml  vae.yaml  vae_agnostic.yaml  vae_quant.yaml  vicreg.yaml  vicreg_agnostic.yaml  vicreg_qvae_kl.yaml  vicreg_qvae_mse.yaml  vicreg_vae_kl.yaml  vicreg_vae_mse.yaml
configs/extras/: default.yaml
configs/hparams_search/: ae_agnostic_optuna.yaml  ae_optuna.yaml  dsae_optuna.yaml  dsrnvp.yaml  dsvae_optuna.yaml  imageae_optuna.yaml  imagerealnvp_optuna.yaml  imagesvdd_optuna.yaml  imagevae_optuna.yaml  realnvp_optuna.yaml  svdd_optuna.yaml  vae_agnostic_optuna.yaml  vae_optuna.yaml  vicreg_agnostic_optuna.yaml  vicreg_optuna.yaml
configs/hydra/: default.yaml
configs/logger/: both.yaml  many_loggers.yaml  mlflow.yaml  wandb.yaml
configs/loss/: alignment.yaml  bvae.yaml  dipvae.yaml  gradient.yaml  kl.yaml  mi.yaml  mmd.yaml  reconstruction.yaml
configs/model/: ae.yaml  axov4.yaml  classifier.yaml  decoder.yaml  encoder.yaml  fqvae.yaml  qae.yaml  qvae.yaml  vae.yaml  vicreg.yaml
configs/paths/: L1AD.yaml  axov4.yaml  data_2024E.yaml  data_2025E+G.yaml  data_2025G.yaml  default.yaml
configs/trainer/: debug.yaml  default.yaml  gpu.yaml  gpu2.yaml  gpu3.yaml
notebooks/: corrs.nb  effs.nb  effs_cifar10.nb  effs_robustad.nb  fetch_mlflow_data  fetch_optuna_pareto.py  get_mlflow_corrs.py  kl_div_plots.nb  pareto.nb  paretos.nb  plot_across_datasets.nb  plot_across_runs.nb  plot_average_across_data_tpr_value.nb  plot_capmetric_comp.nb  plot_convergence_tpr.nb  plot_maximum_tpr.nb  plot_maximum_tpr_classifier.nb  plot_maximum_tpr_value.nb
notebooks/archive/: plot_across_datasets.nb  plot_stability_tpr.nb
scripts/: addpoetry.ps1  capckpt.sh  capckpt_local.sh  evallocal.ps1  h5conversion.ps1  requirements.sh  run.ps1  run.sh  runlocal.ps1  runlocal.sh  setup.ps1  setup.sh  symbolink.ps1  symbolink.sh  vae.sh
scripts/build_hls_model/: build_scales.py  frankenstein_kl.py  frankenstein_mse.py  inspect_quant.py
scripts/cifar10/: runae.sh  runrealnvp.sh  runsvdd.sh  runvae.sh
scripts/physics/: runae.sh  runae_q99.sh  rundsae.sh  rundsae_q99.sh  rundsvae.sh  rundsvae_q99.sh  runrealnvp.sh  runrealnvp_q99.sh  runsvdd.sh  runsvdd_q99.sh  runvae.sh  runvae_q99.sh
scripts/robustad/: runae.sh  runrealnvp.sh  runsvdd.sh  runvae.sh
scripts/run_models/: runae.sh  rundsae.sh  rundsvae.sh  runrealnvp.sh  runsvdd.sh  runvae.sh  runvicreg.sh
src/: capckpt.py  debug.py  debugdata.py  eval.py  train.py
src/algorithms/: __init__.py  ae.py  classifier.py  dsae.py  dsvae.py  image_ae.py  image_svdd.py  image_vae.py  realnvp.py  svdd.py  vae.py  vicreg.py  wnae.py
src/axo/: __init__.py  master.py
src/callbacks/: annealing.py  cap.py  debug.py  efficiency.py  knn_auprc.py  knn_rate.py  log_data_mlflow.py  mlflow.py  model_checkpoint.py  rate.py  thres_drift.py  wasserstein.py
src/data/: CIFAR10_datamodule.py  L1AD_datamodule.py  L1SL_datamodule.py  RobustAD_datamodule.py  debug.py  debug_datamodule.py  utils.py
src/evaluation/: evaluator.py
src/losses/: __init__.py  ae.py  alignment.py  bvae.py  dipvae.py  gradient.py  kl.py  mi.py  mmd.py  reconstruction.py  svdd.py  vae.py  vicreg.py  wnae.py
src/models/: __init__.py  ae.py  augmentation.py  classifier.py  decoder.py  encoder.py  masking.py  mcmc.py  mivae.py  mlp.py  qae.py  qvae.py  utils.py  vae.py  vicreg.py
src/optimizers/: cdrw.py  cdw.py
src/plot/: histogram.py  horizontal_bar.py  matrix.py  overlaid_hist.py  retrieve.py  roc.py  scatter.py
src/utils/: __init__.py  checkpoints.py  hydra.py  instantiators.py  logging_utils.py  omegaconf.py  rich_utils.py  utils.py  (+1 more)
(+269 files in other folders)
