[project]
name = "adl1t"
version = "0.1.0"
description = "Anomaly detection at the level 1 CMS trigger."
authors = [
    {name = "Patrick Odagiu",email = "podagiu@student.ethz.ch"},
    {name = "Victor Jimenez",email = "vjimenez@ethz.ch"}
]
license = {text = "MIT"}
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "torch (==2.*)",
    "torchvision (==0.*)",
    "pytorch-lightning (==2.*)",
    "torchmetrics (==1.*)",
    "hydra-core (==1.*)",
    "rich (==13.*)",
    "pre-commit (==3.*)",
    "pytest (==7.*)",
    "ipdb (>=0.13.13,<0.14.0)",
    "mlflow (==3.1.0)",
    "hydra-optuna-sweeper (>=1.2.0,<2.0.0)",
    "hydra-colorlog>=1.2.0,<2.0.0",
    "rootutils (>=1.0.7,<2.0.0)",
    "retry (>=0.9.2,<0.10.0)",
    "capmetric @ git+ssh://git@github.com/viictorjimenezzz/cap-metric.git@main",
    "numexpr (>=2.14.1,<3.0.0)",
    "pathvalidate (>=3.3.1,<4.0.0)",
    "hydra-submitit-launcher (>=1.2.0,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "mplhep>=0.4.1",
    "wandb>=0.12.10",
    "sqlalchemy (<2.0)",
    "keras>=3.11",
    "adl1t-datamaker",
    "hgq2>=0.1.5",
    "numpy>=1.20,<1.24",
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.uv.workspace]
members = [
    "l1trigger_datamaker",
]

[tool.uv.sources]
adl1t-datamaker = { workspace = true, editable = true }
