[project]
name = "adl1t"
version = "1.0"
description = "Code corresponding to the Informative Model Validation for Anomaly Detection paper."
authors = [
    {name = "Patrick Odagiu",email = "podagiu@ethz.ch"},
]
license = {text = "MIT"}
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "adl1t-datamaker @ git+https://github.com/bb511/adl1t_datamaker.git@main",
    "torch (==2.*)",
    "torchvision (==0.*)",
    "pytorch-lightning (==2.*)",
    "torchmetrics (==1.*)",
    "hydra-core (==1.*)",
    "rich (==13.*)",
    "pre-commit (==3.*)",
    "pytest (==7.*)",
    "ipdb (>=0.13.13,<0.14.0)",
    "mlflow (>=3.2)",
    "hydra-optuna-sweeper (>=1.2.0,<2.0.0)",
    "hydra-colorlog>=1.2.0,<2.0.0",
    "rootutils (>=1.0.7,<2.0.0)",
    "numexpr (>=2.14.1,<3.0.0)",
    "pathvalidate (>=3.3.1,<4.0.0)",
    "hydra-submitit-launcher (>=1.2.0,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "mplhep>=0.4.1",
    "sqlalchemy (<2)",
    "optuna (==2.10.1)",
    "pyarrow (>=21,<23)",
    "datasets (>=4.8.4,<5.0.0)",
    "huggingface-hub (>=1.11.0,<2.0.0)",
]

[tool.poetry.dependencies]
torch = { version = "==2.*", source = "pytorch-cu128" }
torchvision = { version = "==0.*", source = "pytorch-cu128" }
torchaudio = { version = "==2.*", source = "pytorch-cu128" }

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.optional-dependencies]
quant = [
    "keras (<3.13)",
    "hgq2 (>=0.1.5,<0.2.0)",
    "hls4ml @ git+https://github.com/fastmachinelearning/hls4ml.git",
]


[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"


[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

